REfatoração de AppointmentController, Appointment, AppointmentRepository, DoctorAvailabilityRepository, AppointmentService e criação dos ApiErrorResponse, GlobalExceptionHandler e V10__improve_appointment_scheduling_constraints.sql